samples/_failures_safe/1761288392_e8816e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78e1f005.c:170: error: expected ‘;’, ‘,’ or ‘)’ at end of input
